fix: add text-align center

--- a/src/pages/sprint/sprint-words/sprint-words.scss
+++ b/src/pages/sprint/sprint-words/sprint-words.scss
@@ -11,9 +11,11 @@
     line-height: 45px;
     font-weight: 700;
     letter-spacing: 1px;
+    text-align: center;
   }
 
   span.ant-typography {
     font-size: 20px;
+    text-align: center;
   }
 }
